# base16-bytestring

./: .hgignore  .hgtags  .travis.yml  CHANGELOG.md  README.markdown  README.md  base16-bytestring.cabal  cabal.haskell-ci
.github/workflows/: haskell-ci.yml
Data/ByteString/: Base16.hs
Data/ByteString/Base16/: Internal.hs  Lazy.hs
benchmarks/: Benchmarks.hs  base16-bytestring-benchmarks.cabal
tests/: Tests.hs
